# Summer2025programming

./: best_model.h5  example.txt  package-lock.json  tempCodeRunnerFile.c
C-learning-and-projects/Week 1-2 Project/: fileio.c  fileio.h  item.c  item.h  main.c
C-learning-and-projects/w2/: d10practice.c  d11practice.c  d12practice.c  d13practice.c  d14practic.c  d8practice.c  d9practice.c
C-learning-and-projects/w3/: d15practice.c  d16practice.c  d17practice.c  d18examplefile.c  d18practice.c  d19practice.c  d20practice.c
Cpp-learning-and-projects/w1/: d1practice.cpp  d2practice.cpp  d3practice.cpp  d6practice.cpp  d7practice.cpp
Cpp-learning-and-projects/w2/: d10practice.cpp  d11practice.cpp  d12practice.cpp  d13practice.cpp  d14practice.cpp  d8practice.cpp  d9practice.cpp
Cpp-learning-and-projects/w3/: d15practice.cpp  d16practice.cpp  d17practice.cpp  d18practice.cpp  d18projectexample.cpp  d19exampleproject.cpp  d19practice.cpp  d20exampleproject.cpp  d20practice.cpp
HTML-and-CSS-learning-and-projects/w1/: d1practice.css  d1practice.html  d2practice.css  d2practice.html  d3practice.css  d3practice.html  d4practice.css  d4practice.html  d5practice.css  d5practice.html  d6practice.CSS  d6practice.html  d7practice.css  d7practice.html
HTML-and-CSS-learning-and-projects/w2/: d10practice.css  d10practice.html  d11practice.css  d11practice.html  d12practice.css  d12practice.html  d13practice.css  d13practice.html  d14practice.css  d14practice.html  d8practice.css  (+3 more)
Python-C-Combined/: d2comb.c  d4comb.c
Python-C-Combined/d5practice/: d5comb.c  pyproject.toml
(+101 files in other folders)
