[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geom"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools]
packages = []  # no pure-Python packages

[tool.setuptools.ext_modules]
# One C extension named "geom" built from point.c and friends
geom = { sources = ["point.c"], language = "c" }
